template for image flipview
Former-commit-id: c638a0a75e25567ad9943add184dd5c39e9264fb [formerly e5b374d0d439288ed7ee9e799eb2e3f352c8d66f]
Former-commit-id: d3ad01341ea56afb47fcfb15a10a2ec4b4301ab7

--- a/ExViewer/Views/ImagePage.xaml
+++ b/ExViewer/Views/ImagePage.xaml
@@ -259,25 +259,20 @@
               SelectionChanged="fv_SelectionChanged"
               Margin="{x:Bind VisibleBounds, Mode=OneWay}"
               ItemTemplate="{StaticResource FlipViewItemTemplate}">
-      <!--<FlipView.Resources>
+      <FlipView.Resources>
         <ItemsPanelTemplate x:Name="iptHorizontal">
           <VirtualizingStackPanel Orientation="Horizontal" />
         </ItemsPanelTemplate>
         <ItemsPanelTemplate x:Name="iptVertical">
           <VirtualizingStackPanel Orientation="Vertical"/>
         </ItemsPanelTemplate>
-      </FlipView.Resources>-->
+      </FlipView.Resources>
       <FlipView.ItemContainerStyle>
         <Style TargetType="FlipViewItem">
           <Setter Property="IsTabStop"
                   Value="False" />
         </Style>
       </FlipView.ItemContainerStyle>
-      <FlipView.ItemsPanel>
-        <ItemsPanelTemplate>
-          <VirtualizingStackPanel />
-        </ItemsPanelTemplate>
-      </FlipView.ItemsPanel>
     </FlipView>
     <Border x:Name="bdTop"
             Padding="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x1,x1,x1,x0'), Mode=OneWay}"
