bug fix; reting control cancelable
Former-commit-id: bf76897543083594fcf65229a5dc7e885576d10d [formerly b4db8089e9c29a3c2501a4543f82db1ad9157038]
Former-commit-id: a1540d245494e19b2e418e2f94e3e388cf96b81f

--- a/ExViewer/Controls/TagPresenter.xaml
+++ b/ExViewer/Controls/TagPresenter.xaml
@@ -122,6 +122,7 @@
           <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <TextBlock Grid.Column="0"
+                   IsHitTestVisible="False"
                    Padding="2,0"
                    HorizontalAlignment="Right"
                    Text="{x:Bind tagging:NamespaceExtention.ToFriendlyNameString(Namespace)}" />
