--- a/ExViewer/Views/SavedPage.xaml
+++ b/ExViewer/Views/SavedPage.xaml
@@ -7,6 +7,7 @@
                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                 NavigationCacheMode="Enabled"
+                xmlns:controls="using:ExViewer.Controls"
                 x:Name="page"
                 mc:Ignorable="d">
   <Page.Resources>
@@ -42,7 +43,7 @@
                               ContextCanceled="lv_ContextCanceled"
                               ContextRequested="lv_ContextRequested">
       <tk:PullToRefreshListView.RefreshIndicatorContent>
-        <tk:PullToRefreshIndicator />
+        <controls:PullToRefreshIndicator />
       </tk:PullToRefreshListView.RefreshIndicatorContent>
       <ListView.ItemTemplate>
         <DataTemplate xmlns:c="using:ExClient.Galleries"
