add margin for scrollbar
Former-commit-id: 5675c28c0a134d852ff1e0acf7646570a30fcf6c [formerly 74e652a4c66122f7568c33106e3ca07db7ccf8f2]
Former-commit-id: d929bfa7934ec9d99f293283511185a0d04ee122

--- a/ExViewer/Views/CachedPage.xaml
+++ b/ExViewer/Views/CachedPage.xaml
@@ -9,6 +9,7 @@
                 NavigationCacheMode="Enabled"
                 x:Name="page"
                 xmlns:controls="using:ExViewer.Controls"
+                xmlns:ext="using:Microsoft.Toolkit.Uwp.UI.Extensions"
                 mc:Ignorable="d">
   <Page.Resources>
     <MenuFlyout x:Name="mf_Gallery"
@@ -32,6 +33,7 @@
     <tk:PullToRefreshListView x:Name="lv"
                               Margin="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x1,x0'), Mode=OneWay}"
                               Padding="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x0,x0,x0,x1'), Mode=OneWay}"
+                              ext:ScrollViewerEx.VerticalScrollBarMargin="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x0,x0,x0,x1'), Mode=OneWay}"
                               RefreshCommand="{x:Bind ViewModel.Refresh}"
                               RelativePanel.AlignBottomWithPanel="True"
                               RelativePanel.AlignLeftWithPanel="True"
