--- a/ExViewer/Views/GalleryPage.xaml
+++ b/ExViewer/Views/GalleryPage.xaml
@@ -6,6 +6,7 @@
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                 xmlns:VM="using:ExViewer.ViewModels"
                 xmlns:client="using:ExClient"
+                xmlns:ext="using:Microsoft.Toolkit.Uwp.UI.Extensions"
                 xmlns:tagging="using:ExClient.Tagging"
                 xmlns:controls="using:ExViewer.Controls"
                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -366,6 +367,7 @@
               <GridView x:Name="gv"
                         Margin="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x1,x0'), Mode=OneWay}"
                         Padding="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x0,x0,x0,x1'), Mode=OneWay}"
+                        ext:ScrollViewerEx.VerticalScrollBarMargin="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x0,x0,x0,x1'), Mode=OneWay}"
                         ani:ReorderGridAnimation.Duration="100"
                         IsItemClickEnabled="True"
                         ItemClick="gv_ItemClick"
@@ -419,6 +421,7 @@
               <ListView x:Name="lv_Comments"
                         Margin="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x1,x0'), Mode=OneWay}"
                         Padding="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x0,x0,x0,x1'), Mode=OneWay}"
+                        ext:ScrollViewerEx.VerticalScrollBarMargin="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x0,x0,x0,x1'), Mode=OneWay}"
                         ItemsSource="{x:Bind ViewModel.Gallery.Comments, Mode=OneWay}"
                         Loaded="pv_Content_Loaded"
                         SelectionMode="None">
@@ -479,6 +482,7 @@
               <ListView x:Name="lv_Torrents"
                         Margin="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x1,x0'), Mode=OneWay}"
                         Padding="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x0,x0,x0,x1'), Mode=OneWay}"
+                        ext:ScrollViewerEx.VerticalScrollBarMargin="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x0,x0,x0,x1'), Mode=OneWay}"
                         ItemTemplate="{StaticResource TorrentTemplate}"
                         ItemsSource="{x:Bind ViewModel.Torrents, Mode=OneWay}"
                         ItemContainerStyle="{StaticResource UnfocusableListViewItemStyle}"
