--- a/ExViewer/Views/PopularPage.xaml
+++ b/ExViewer/Views/PopularPage.xaml
@@ -5,6 +5,7 @@
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                 xmlns:controls="using:ExViewer.Controls"
                 xmlns:local="using:ExViewer.Views"
+                xmlns:ext="using:Microsoft.Toolkit.Uwp.UI.Extensions"
                 NavigationCacheMode="Enabled"
                 xmlns:tk="using:Microsoft.Toolkit.Uwp.UI.Controls"
                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -22,6 +23,7 @@
     <tk:PullToRefreshListView x:Name="lv"
                               Margin="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x1,x0'), Mode=OneWay}"
                               Padding="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x0,x0,x0,x1'), Mode=OneWay}"
+                              ext:ScrollViewerEx.VerticalScrollBarMargin="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x0,x0,x0,x1'), Mode=OneWay}"
                               RefreshCommand="{x:Bind ViewModel.Refresh}"
                               RelativePanel.AlignLeftWithPanel="True"
                               RelativePanel.AlignRightWithPanel="True"
