--- a/ExViewer/Views/ImagePage.xaml
+++ b/ExViewer/Views/ImagePage.xaml
@@ -5,6 +5,7 @@
                 xmlns:prers3="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,5)"
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                 xmlns:controls="using:ExViewer.Controls"
+                xmlns:ext="using:Microsoft.Toolkit.Uwp.UI.Extensions"
                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                 xmlns:local="using:ExViewer.Views"
                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
