--- a/ExViewer/Views/SearchPage.xaml
+++ b/ExViewer/Views/SearchPage.xaml
@@ -2,11 +2,14 @@
                 xmlns:views="using:Opportunity.MvvmUniverse.Views"
                 xmlns:xb="using:Opportunity.Converters.XBind"
                 x:Name="root"
+                xmlns:ext="using:Microsoft.Toolkit.Uwp.UI.Extensions"
                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                 xmlns:tk="using:Microsoft.Toolkit.Uwp.UI.Controls"
+                xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
+                xmlns:behaviors="using:Microsoft.Toolkit.Uwp.UI.Animations.Behaviors"
                 xmlns:client="using:ExClient"
                 mc:Ignorable="d"
                 Loading="root_Loading"
@@ -36,14 +39,15 @@
   </Page.Resources>
   <RelativePanel>
     <tk:PullToRefreshListView x:Name="lv"
-                              RelativePanel.Below="ab"
+                              RelativePanel.AlignTopWithPanel="True"
                               RelativePanel.AlignBottomWithPanel="True"
                               RelativePanel.AlignLeftWithPanel="True"
                               RelativePanel.AlignRightWithPanel="True"
                               SelectionMode="None"
                               RefreshRequested="lv_RefreshRequested"
-                              Margin="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x1,x0'), Mode=OneWay}"
+                              Margin="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x1,48,x1,x0'), Mode=OneWay}"
                               Padding="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x0,x0,x0,x1'), Mode=OneWay}"
+                              ext:ScrollViewerEx.VerticalScrollBarMargin="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x0,x0,x0,x1'), Mode=OneWay}"
                               ItemsSource="{x:Bind ViewModel.SearchResult, Mode=OneWay}"
                               ContinuumNavigationTransitionInfo.ExitElementContainer="True"
                               Style="{StaticResource GalleryListViewStyle}"
@@ -60,16 +64,12 @@
         </DataTemplate>
       </ListView.ItemTemplate>
       <ListView.Header>
-        <tk:ScrollHeader>
-          <StackPanel>
-            <TextBlock x:Uid="Views/SearchPage/EmptyTextBlock"
-                       HorizontalAlignment="Center"
-                       Margin="12"
-                       Style="{StaticResource BaseTextBlockStyle}"
-                       Visibility="{x:Bind client:SearchResultExtension.IsEmptyVisible(ViewModel.SearchResult.Count, ViewModel.SearchResult.HasMoreItems), FallbackValue=Collapsed, Mode=OneWay}"
-                       Text="No hits found" />
-          </StackPanel>
-        </tk:ScrollHeader>
+        <TextBlock x:Uid="Views/SearchPage/EmptyTextBlock"
+                   HorizontalAlignment="Center"
+                   Margin="12"
+                   Style="{StaticResource BaseTextBlockStyle}"
+                   Visibility="{x:Bind client:SearchResultExtension.IsEmptyVisible(ViewModel.SearchResult.Count, ViewModel.SearchResult.HasMoreItems), FallbackValue=Collapsed, Mode=OneWay}"
+                   Text="No hits found" />
       </ListView.Header>
       <ListView.Footer>
         <TextBlock x:Uid="Views/SearchPage/LoadingMoreTextBlock"
