fix image index bug, again & again
Former-commit-id: 2339e3ad6a571f30a16861e212578abed1dd4d48 [formerly 6cac5eb80b5244f24ebc0a07d0b6670e25afd506]
Former-commit-id: 8786a8d0287e4f02c4dbb6688dca8d7475320c0d

--- a/ExViewer/Themes/Generic.xaml
+++ b/ExViewer/Themes/Generic.xaml
@@ -854,6 +854,8 @@
             Value="True" />
     <Setter Property="FocusVisualMargin"
             Value="-4,-2" />
+    <Setter Property="AllowFocusWhenDisabled"
+            Value="True" />
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate TargetType="controls:Rating">
