--- a/ExViewer/Views/LogOnDialog.xaml
+++ b/ExViewer/Views/LogOnDialog.xaml
@@ -11,6 +11,7 @@
                           PrimaryButtonText="Reset"
                           PrimaryButtonClick="MyContentDialog_PrimaryButtonClick"
                           CloseButtonText="?"
+                          RequiresPointer="WhenFocused"
                           CloseButtonClick="MyContentDialog_CloseButtonClick"
                           Opened="ContentDialog_Opened"
                           FullSizeDesired="True">
