--- a/ExViewer/Controls/AboutControl.xaml
+++ b/ExViewer/Controls/AboutControl.xaml
@@ -263,6 +263,7 @@ M0.1,49.9h1.8l0.8-3.3h2.9L6,45.2H3.1l0.5-2.1h3.1l0.4-1.7h-5L0.1,49.9z M8,49.9l0.
                Text="Japanese translation of tags"
                Style="{StaticResource AboutControlSubheaderTextBlockStyle}" />
     <HyperlinkButton x:Name="hbDatabaseEhw"
+                     XYFocusUp="{x:Bind btnUpdateEht}"
                      NavigateUri="https://ehwiki.org/"
                      Style="{StaticResource AboutControlHyperLinkButtonStyle}">
       <StackPanel Orientation="Vertical">
