--- a/ExViewer/Controls/TagPresenter.xaml
+++ b/ExViewer/Controls/TagPresenter.xaml
@@ -173,7 +173,7 @@
             Grid.Row="1"
             Margin="18,2"
             Style="{ThemeResource TextBlockButtonStyle}"
-            HorizontalAlignment="Center"
+            HorizontalAlignment="Stretch"
             Content="Add new tags"
             GotFocus="btnStartNew_GotFocus"
             Click="btnStartNew_Click" />
