--- a/ExViewer/Controls/AboutControl.xaml
+++ b/ExViewer/Controls/AboutControl.xaml
@@ -285,6 +285,11 @@ M0.1,49.9h1.8l0.8-3.3h2.9L6,45.2H3.1l0.5-2.1h3.1l0.4-1.7h-5L0.1,49.9z M8,49.9l0.
                      Content="View source code and feedback"
                      NavigateUri="https://github.com/OpportunityLiu/ExViewer" />
     <HyperlinkButton Style="{StaticResource AboutControlHyperLinkButtonStyle}"
+                     x:Uid="Controls/AboutControl/SendLogHyperlinkButton"
+                     xmlns:ex="using:ExViewer"
+                     Content="Send crash log"
+                     Click="{x:Bind ex:Telemetry.SendLog}"/>
+    <HyperlinkButton Style="{StaticResource AboutControlHyperLinkButtonStyle}"
                      x:Uid="Controls/AboutControl/HelpTranslateTagsHyperlinkButton"
                      Content="Help translate tags into Chinese"
                      NavigateUri="https://github.com/Mapaler/EhTagTranslator/wiki" />
